feat: reinitialisation du frontend avec react js